[package]
name = "example-plugin"
version = "0.1.0"
authors = ["Thomas Bytheway <tb403@cam.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib" ]

[dependencies]
pvm-plugins = { git = "https://github.com/DTG-FRESCO/libpvm-rs.git" }
